[gd_scene load_steps=56 format=3 uid="uid://ct6xfu2g763f5"]

[ext_resource type="Script" uid="uid://v7prbopsco2o" path="res://scripts/enemy.gd" id="1_fq8ad"]
[ext_resource type="Texture2D" uid="uid://cyxw2rdg03foi" path="res://assets/sprites/characters/tiles/slime/tile077.png" id="2_j1pr3"]
[ext_resource type="Texture2D" uid="uid://dfxp75g4gmcup" path="res://assets/sprites/characters/tiles/slime/tile078.png" id="3_xxnat"]
[ext_resource type="Texture2D" uid="uid://cr8tplhw3l753" path="res://assets/sprites/characters/tiles/slime/tile079.png" id="4_nettl"]
[ext_resource type="Texture2D" uid="uid://cxu4lqif3ls7b" path="res://assets/sprites/characters/tiles/slime/tile084.png" id="5_20yfm"]
[ext_resource type="Texture2D" uid="uid://cwqgn6wbwo3em" path="res://assets/sprites/characters/tiles/slime/tile085.png" id="6_q6aid"]
[ext_resource type="Texture2D" uid="uid://yxtme6f2ajc3" path="res://assets/sprites/characters/tiles/slime/tile086.png" id="7_t62om"]
[ext_resource type="Texture2D" uid="uid://1lidv6qvn5q0" path="res://assets/sprites/characters/tiles/slime/tile087.png" id="8_di3s7"]
[ext_resource type="Texture2D" uid="uid://bdcjo5rlf4fvk" path="res://assets/sprites/characters/tiles/slime/tile088.png" id="9_p8kvh"]
[ext_resource type="Texture2D" uid="uid://dfrty2elx7i88" path="res://assets/sprites/characters/tiles/slime/tile089.png" id="10_oj7qy"]
[ext_resource type="Texture2D" uid="uid://cyejamhnrnhcs" path="res://assets/sprites/characters/tiles/slime/tile000.png" id="11_4qilb"]
[ext_resource type="Texture2D" uid="uid://0ymoiqv74xpp" path="res://assets/sprites/characters/tiles/slime/tile001.png" id="12_uhdqh"]
[ext_resource type="Texture2D" uid="uid://basc7ebbolf0c" path="res://assets/sprites/characters/tiles/slime/tile002.png" id="13_ccbbw"]
[ext_resource type="Texture2D" uid="uid://c8i16xbj5aoig" path="res://assets/sprites/characters/tiles/slime/tile003.png" id="14_m6srv"]
[ext_resource type="Texture2D" uid="uid://b8mieiyru0bi0" path="res://assets/sprites/characters/tiles/slime/tile007.png" id="15_bx15q"]
[ext_resource type="Texture2D" uid="uid://26r4kmdevdyw" path="res://assets/sprites/characters/tiles/slime/tile008.png" id="16_v02nr"]
[ext_resource type="Texture2D" uid="uid://nkoyq0bhaar3" path="res://assets/sprites/characters/tiles/slime/tile009.png" id="17_8pk15"]
[ext_resource type="Texture2D" uid="uid://bdbq5sdupt0qp" path="res://assets/sprites/characters/tiles/slime/tile010.png" id="18_yaian"]
[ext_resource type="Texture2D" uid="uid://d11156ebikm2v" path="res://assets/sprites/characters/tiles/slime/tile014.png" id="19_w8nyb"]
[ext_resource type="Texture2D" uid="uid://bwgdfkubhdad" path="res://assets/sprites/characters/tiles/slime/tile015.png" id="20_sxkh0"]
[ext_resource type="Texture2D" uid="uid://cyw8ale1cyfx5" path="res://assets/sprites/characters/tiles/slime/tile016.png" id="21_pyvri"]
[ext_resource type="Texture2D" uid="uid://fu5fesb0i7gg" path="res://assets/sprites/characters/tiles/slime/tile017.png" id="22_qftu3"]
[ext_resource type="Texture2D" uid="uid://dliueywdsu383" path="res://assets/sprites/characters/tiles/slime/tile042.png" id="23_ybt8m"]
[ext_resource type="Texture2D" uid="uid://cth3ek1t88fmt" path="res://assets/sprites/characters/tiles/slime/tile021.png" id="24_4sfiy"]
[ext_resource type="Texture2D" uid="uid://chvplcqp2kova" path="res://assets/sprites/characters/tiles/slime/tile022.png" id="25_hb2o4"]
[ext_resource type="Texture2D" uid="uid://c3pbj47vrkdm0" path="res://assets/sprites/characters/tiles/slime/tile023.png" id="26_nr6c1"]
[ext_resource type="Texture2D" uid="uid://b7fvxwbqwp17m" path="res://assets/sprites/characters/tiles/slime/tile024.png" id="27_8hbvk"]
[ext_resource type="Texture2D" uid="uid://ckewkqw0wyotf" path="res://assets/sprites/characters/tiles/slime/tile043.png" id="28_0n35i"]
[ext_resource type="Texture2D" uid="uid://b1x2k87t5r8aw" path="res://assets/sprites/characters/tiles/slime/tile025.png" id="29_ywceh"]
[ext_resource type="Texture2D" uid="uid://pqpg535r2i34" path="res://assets/sprites/characters/tiles/slime/tile028.png" id="30_xwccp"]
[ext_resource type="Texture2D" uid="uid://btwn8tkjv6np7" path="res://assets/sprites/characters/tiles/slime/tile029.png" id="31_hojbl"]
[ext_resource type="Texture2D" uid="uid://5r008x3dv0t1" path="res://assets/sprites/characters/tiles/slime/tile030.png" id="32_34hay"]
[ext_resource type="Texture2D" uid="uid://dflxxtsps6reu" path="res://assets/sprites/characters/tiles/slime/tile031.png" id="33_3un5y"]
[ext_resource type="Texture2D" uid="uid://bqeeirc6odu6g" path="res://assets/sprites/characters/tiles/slime/tile033.png" id="34_qnj4d"]
[ext_resource type="Texture2D" uid="uid://mjrmftkmvevk" path="res://assets/sprites/characters/tiles/slime/tile032.png" id="35_uifqy"]
[ext_resource type="Texture2D" uid="uid://cqfpy401xyrxw" path="res://assets/sprites/characters/tiles/slime/tile035.png" id="36_tqa47"]
[ext_resource type="Texture2D" uid="uid://2hiydcp7bvki" path="res://assets/sprites/characters/tiles/slime/tile036.png" id="37_akc8q"]
[ext_resource type="Texture2D" uid="uid://ckkbxaup4guqw" path="res://assets/sprites/characters/tiles/slime/tile037.png" id="38_3d3oh"]
[ext_resource type="Texture2D" uid="uid://cea5x0fpfwxla" path="res://assets/sprites/characters/tiles/slime/tile038.png" id="39_2rjsx"]
[ext_resource type="Texture2D" uid="uid://bacgv7ah80gd8" path="res://assets/sprites/characters/tiles/slime/tile039.png" id="40_raesi"]
[ext_resource type="Texture2D" uid="uid://11frskx0iaux" path="res://assets/sprites/characters/tiles/slime/tile040.png" id="41_8nkll"]
[ext_resource type="Texture2D" uid="uid://bq1bho2h6jnma" path="res://assets/sprites/UI/healthbarUnder.png" id="42_kfyl1"]
[ext_resource type="Texture2D" uid="uid://cf2egftds03tm" path="res://assets/sprites/UI/healthbarProgress.png" id="43_o838k"]
[ext_resource type="PackedScene" uid="uid://cupoiia1ecpch" path="res://healthbar.tscn" id="44_mtqqc"]
[ext_resource type="Script" uid="uid://calvmjgqc5a6q" path="res://scripts/hurtbox.gd" id="45_db1s4"]
[ext_resource type="Script" uid="uid://p8h3fxevo1ct" path="res://scripts/hitbox.gd" id="46_bgmq1"]
[ext_resource type="PackedScene" uid="uid://cebm1aefx438s" path="res://chain_lightning_animation.tscn" id="47_pf1hb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ygys0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j1pr3")
}, {
"duration": 1.0,
"texture": ExtResource("3_xxnat")
}, {
"duration": 1.0,
"texture": ExtResource("4_nettl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_20yfm")
}, {
"duration": 1.0,
"texture": ExtResource("6_q6aid")
}, {
"duration": 1.0,
"texture": ExtResource("7_t62om")
}, {
"duration": 1.0,
"texture": ExtResource("8_di3s7")
}, {
"duration": 1.0,
"texture": ExtResource("9_p8kvh")
}, {
"duration": 1.0,
"texture": ExtResource("10_oj7qy")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_4qilb")
}, {
"duration": 1.0,
"texture": ExtResource("12_uhdqh")
}, {
"duration": 1.0,
"texture": ExtResource("13_ccbbw")
}, {
"duration": 1.0,
"texture": ExtResource("14_m6srv")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_bx15q")
}, {
"duration": 1.0,
"texture": ExtResource("16_v02nr")
}, {
"duration": 1.0,
"texture": ExtResource("17_8pk15")
}, {
"duration": 1.0,
"texture": ExtResource("18_yaian")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_w8nyb")
}, {
"duration": 1.0,
"texture": ExtResource("20_sxkh0")
}, {
"duration": 1.0,
"texture": ExtResource("21_pyvri")
}, {
"duration": 1.0,
"texture": ExtResource("22_qftu3")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_ybt8m")
}, {
"duration": 1.0,
"texture": ExtResource("24_4sfiy")
}, {
"duration": 1.0,
"texture": ExtResource("25_hb2o4")
}, {
"duration": 1.0,
"texture": ExtResource("26_nr6c1")
}, {
"duration": 1.0,
"texture": ExtResource("27_8hbvk")
}, {
"duration": 1.0,
"texture": ExtResource("28_0n35i")
}, {
"duration": 1.0,
"texture": ExtResource("29_ywceh")
}],
"loop": false,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_xwccp")
}, {
"duration": 1.0,
"texture": ExtResource("31_hojbl")
}, {
"duration": 1.0,
"texture": ExtResource("32_34hay")
}, {
"duration": 1.0,
"texture": ExtResource("33_3un5y")
}, {
"duration": 1.0,
"texture": ExtResource("34_qnj4d")
}, {
"duration": 1.0,
"texture": ExtResource("35_uifqy")
}],
"loop": false,
"name": &"move_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_tqa47")
}, {
"duration": 1.0,
"texture": ExtResource("37_akc8q")
}, {
"duration": 1.0,
"texture": ExtResource("38_3d3oh")
}, {
"duration": 1.0,
"texture": ExtResource("39_2rjsx")
}, {
"duration": 1.0,
"texture": ExtResource("40_raesi")
}, {
"duration": 1.0,
"texture": ExtResource("41_8nkll")
}],
"loop": false,
"name": &"move_up",
"speed": 6.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("5_20yfm")
}, {
"duration": 0.5,
"texture": ExtResource("6_q6aid")
}, {
"duration": 0.5,
"texture": ExtResource("6_q6aid")
}, {
"duration": 0.5,
"texture": ExtResource("5_20yfm")
}],
"loop": false,
"name": &"take_damage",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83fs2"]
size = Vector2(12, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_03ef8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g7tg0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xcpqa"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j72rr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rv8ia"]
radius = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fq8ad"]
size = Vector2(70, 48)

[node name="Enemy" type="CharacterBody2D" groups=["boid"]]
process_mode = 1
physics_interpolation_mode = 2
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_fq8ad")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_ygys0")
animation = &"die"
autoplay = "idle_down"
speed_scale = 0.85

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Areas"]]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_83fs2")

[node name="Control" type="Control" parent="."]
z_index = 20
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
visible = false
layout_mode = 0
offset_left = -17.0
offset_top = -18.0
offset_right = 17.0
offset_bottom = -13.0
nine_patch_stretch = true
texture_under = ExtResource("42_kfyl1")
texture_progress = ExtResource("43_o838k")

[node name="Healthbar" parent="Control" instance=ExtResource("44_mtqqc")]
layout_mode = 0
offset_left = -10.0
offset_top = 7.0
offset_right = 32.0
offset_bottom = 10.0
scale = Vector2(0.5, 0.5)
max_value = 0.0
value = 0.0

[node name="Label" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = -19.0
offset_top = -34.0
offset_right = 21.0
offset_bottom = -11.0
text = "cos"

[node name="EnemyHurtbox" type="Area2D" parent="." groups=["Areas"]]
visible = false
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource("45_db1s4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox" groups=["Areas"]]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_03ef8")
debug_color = Color(0.968809, 0, 0.465463, 0.42)

[node name="EnemyHitbox" type="Area2D" parent="." groups=["Areas"]]
visible = false
collision_layer = 32
collision_mask = 0
monitoring = false
script = ExtResource("46_bgmq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox" groups=["Areas"]]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_g7tg0")

[node name="CollisionArea" type="Area2D" parent="." groups=["Areas"]]
visible = false
collision_layer = 0

[node name="KnockbackCollisionShape" type="CollisionShape2D" parent="CollisionArea" groups=["Areas"]]
shape = SubResource("CircleShape2D_xcpqa")
debug_color = Color(0, 0.631203, 0.464635, 0.42)

[node name="ProjectileDestroyArea" type="Area2D" parent="." groups=["Areas"]]
visible = false
position = Vector2(0, -1)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileDestroyArea" groups=["Areas"]]
shape = SubResource("CircleShape2D_j72rr")

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.1
one_shot = true
explosiveness = 1.0
randomness = 0.55
spread = 15.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 475.44
scale_amount_max = 3.0
color = Color(0.392157, 0.701961, 0.729412, 1)

[node name="DamageNumbersOrigin" type="Node2D" parent="."]
position = Vector2(0, -11)

[node name="PoisonTimer" type="Timer" parent="."]
autostart = true

[node name="ChainLightningShapeCast" type="ShapeCast2D" parent="."]
visible = false
enabled = false
shape = SubResource("CircleShape2D_rv8ia")
target_position = Vector2(0, 0)
collision_mask = 4

[node name="ChainLightningAnimation" parent="." instance=ExtResource("47_pf1hb")]
visible = false

[node name="Vision" type="Area2D" parent="." groups=["boid"]]
process_mode = 4
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("RectangleShape2D_fq8ad")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="EnemyHurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
